[gd_scene load_steps=4 format=3 uid="uid://dudhauadglcko"]

[ext_resource type="Script" path="res://ui/server_join.gd" id="1_54qx8"]
[ext_resource type="PackedScene" uid="uid://dpx8mdnihun1p" path="res://ui/blur_panel.tscn" id="2_h5e0q"]

[sub_resource type="LabelSettings" id="LabelSettings_c5p8y"]
font_size = 50

[node name="ServerJoin" type="CanvasLayer"]
script = ExtResource("1_54qx8")

[node name="BlurPanel" parent="." instance=ExtResource("2_h5e0q")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 455.0
offset_bottom = 475.0
theme_override_constants/separation = 27

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Shooter / Join server"
label_settings = SubResource("LabelSettings_c5p8y")

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Server"

[node name="NewServerEdit" type="TextEdit" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddServerButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Add server
"

[node name="ItemList" type="ItemList" parent="Control/VBoxContainer"]
layout_mode = 2
auto_height = true
item_count = 1
item_0/text = "127.0.0.1"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="DeleteServerButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Delete"

[node name="JoinServerButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Join server"

[node name="BackButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="button_down" from="Control/VBoxContainer/HBoxContainer2/AddServerButton" to="." method="_on_add_server_button_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/HBoxContainer/DeleteServerButton" to="." method="_on_delete_server_button_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/HBoxContainer/JoinServerButton" to="." method="_on_join_server_button_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/BackButton" to="." method="_on_back_button_button_down"]
